--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
             background: #629ca1 !important;
         }
 
+        .container {
+            width: 100%; /* Use relative width */
+            max-width: 800px; /* Optional, for larger screens */
+        }
+
         body {
             font-family: Arial, sans-serif;
             margin: 0;
