--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
     <link rel="icon" href="img/CreativetouchImages/iconCT.png" type="image/x-icon">
 
     <style>
+        * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
         .bg-primary {
     background-color: #629ca1 !important;
         }       
