cimmented device width

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Your one-stop solution for all printing needs. Specializing in banners, wedding cards, ID cards, and more!">
     <meta property="og:image" content="URL_to_your_image.jpg"> <!-- Replace with the URL of your logo or relevant image -->
     <meta property="og:url" content="https://www.yourwebsite.com"> <!-- Replace with your website URL -->
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <!-- <meta content="width=device-width, initial-scale=1.0" name="viewport"> -->
 
 
     <!-- Google Web Fonts -->
@@ -39,10 +39,14 @@
 
     <style>
         * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        img {
+            max-width: 100%;
+            height: auto; /* Maintain aspect ratio */
+        }
 
 
         .bg-primary {
