--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Your one-stop solution for all printing needs. Specializing in banners, wedding cards, ID cards, and more!">
     <meta property="og:image" content="URL_to_your_image.jpg"> <!-- Replace with the URL of your logo or relevant image -->
     <meta property="og:url" content="https://www.yourwebsite.com"> <!-- Replace with your website URL -->
-    <!-- <meta content="width=device-width, initial-scale=1.0" name="viewport"> -->
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
 
     <!-- Google Web Fonts -->
@@ -38,17 +38,6 @@
     <link rel="icon" href="img/CreativetouchImages/iconCT.png" type="image/x-icon">
 
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        img {
-            max-width: 100%;
-            height: auto; /* Maintain aspect ratio */
-        }
-
-
         .bg-primary {
     background-color: #629ca1 !important;
         }       
@@ -67,11 +56,6 @@
         }
         .services-content::after{
             background: #629ca1 !important;
-        }
-
-        .container {
-            width: 100%; /* Use relative width */
-            max-width: 800px; /* Optional, for larger screens */
         }
 
         body {
@@ -1181,11 +1165,10 @@
                             </div>
                             <div class="ms-3">
                                 <h4 class="text-primary">Call Us</h4>
-                                <a class="h5" href="tel:+0123456789" target="_blank">+918113833722</a>
-                                <a class="h5" href="tel:+0123456789" target="_blank">+919539833722</a>
-                                <a class="h5" href="tel:+0123456789" target="_blank">+919447892205</a>
-                                <a class="h5" href="tel:+0123456789" target="_blank">+919747099124</a>
-
+                                <a class="h5" href="tel:+918113833722" target="_blank">+91 8113 833722</a><br>
+                                <a class="h5" href="tel:+0123456789" target="_blank">+91 9539 833722</a><br>
+                                <a class="h5" href="tel:+0123456789" target="_blank">+91 9447 892205</a><br>
+                                <a class="h5" href="tel:+0123456789" target="_blank">+91 9747 099124</a>
 
                             </div>
                         </div>
@@ -1198,7 +1181,7 @@
                             </div>
                             <div class="ms-3">
                                 <h4 class="text-primary">Email Us</h4>
-                                <a class="h5" href="mailto:creativetouchkumbla@gmail.com" target="_blank">creativetouchkumbla@gmail.com</a>
+                                <a class="h5" style="word-wrap: break-word" href="mailto:creativetouchkumbla@gmail.com" target="_blank">creative<wbr>touch<wbr>kumbla<wbr>@gmail<wbr>.com</a>
                             </div>
                         </div>
                     </div>
