form width issue

--- a/index.html
+++ b/index.html
@@ -1253,7 +1253,10 @@
                                 <button class="btn bg-primary text-white py-3 px-5" type="button">Send Message</button>
                             </div>
                         </div> -->
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScJB-ycbnhucLkLzCioFYd2xJPLADWZ_DLMKEs6VKmWBr0-vg/viewform?embedded=true" width="450" height="400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                        <div class="rounded">
+                            <iframe class="contact-form rounded w-100" src="https://docs.google.com/forms/d/e/1FAIpQLScJB-ycbnhucLkLzCioFYd2xJPLADWZ_DLMKEs6VKmWBr0-vg/viewform?embedded=true"
+                             height="600px !important" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                        </div>
 
                     </div>
                 </div>
